# LANLink

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  install.bat  install.ps1  launcher.py  pyproject.toml  requirements.txt  run.bat  uninstall.ps1
lanlink/: __init__.py  app.py  config.py  discovery.py  remote.py
lanlink/static/: app.js  remote.js  style.css
lanlink/templates/: index.html  remote.html
tests/: test_lanlink.py
